--- a/CMP_N7/src/css/Tupla.css
+++ b/CMP_N7/src/css/Tupla.css
@@ -1,7 +1,7 @@
 .tupla-mark {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   border: .1rem solid var(--colorPri);
   border-radius: .7rem;
   margin: 1rem 2rem;
@@ -10,16 +10,15 @@
 
 .tupla-titulo {
   font-weight: bold;
-  margin: 1rem;
 }
 
 .tupla-text {
-  margin: 1rem;
+  margin: .5rem;
 }
 
 .tupla-boton {
   display: block;
-  padding: .3rem 1rem;
+  padding: .1rem 1rem;
   background-color: var(--colorPri);
   color: var(--colorSec);
   border: .2rem solid var(--colorPri);
@@ -29,8 +28,7 @@
   display: flex;
   border: .2rem solid var(--colorPri);
   border-radius: 1rem;
-  padding: .1rem;
-  margin: 0 .5rem;
+  padding: .2rem .1rem;
 }
 
 .tupla-valor {
