--- a/CMP_N7/src/css/index.css
+++ b/CMP_N7/src/css/index.css
@@ -20,6 +20,7 @@
   --colorShld025: #3600b3; 
   --colorShld005: #000985; 
   --colorShld000: #000000; 
+  --colorBlinded: #ff9f32;
 }
 /* Imprescindibles */
 html {
