--- a/CMP_N7/src/css/Pie.css
+++ b/CMP_N7/src/css/Pie.css
@@ -22,7 +22,7 @@ footer a::before {
   content: '';
   height: 2rem;
   width: 2rem;
-  background: url(../assets/icons/github.svg);
+  background: url(../assets/github.svg);
   background-position: center;
   background-size: contain;
 }
