modified:   CMP_N7/src/css/FSection.css 	modified:   CMP_N7/src/css/FText.css 	modified:   CMP_N7/src/css/FTitle.css 	modified:   CMP_N7/src/css/Form.css 	new file:   CMP_N7/src/css/Poder.css 	modified:   CMP_N7/src/css/index.css 	modified:   CMP_N7/src/keepStates.js 	modified:   CMP_N7/src/modules/App.jsx 	modified:   CMP_N7/src/modules/Combatiente.jsx 	modified:   CMP_N7/src/modules/FormEditPlayer.jsx 	new file:   CMP_N7/src/modules/FormPoder.jsx 	new file:   CMP_N7/src/modules/Poder.jsx 	new file:   CMP_N7/src/modules/Poderes.jsx 	modified:   CMP_N7/src/modules/TurnReset.jsx 	modified:   CMP_N7/src/modules/TurnShow.jsx

--- a/CMP_N7/src/css/index.css
+++ b/CMP_N7/src/css/index.css
@@ -21,6 +21,7 @@
   --colorShld005: #000985; 
   --colorShld000: #000000; 
   --colorBlinded: #ff9f32;
+  --colorActived: #be3c15;
 }
 /* Imprescindibles */
 html {
@@ -34,8 +35,8 @@ html {
 }
 body {
   font-family: var(--fontGeneral);
-  font-size: 1.4rem;
-  line-height: 1.5;
+  font-size: 1.0rem;
+  line-height: 1.2;
   margin-bottom: 8rem;
 }
 @media (max-width: 750px) {
