--- a/CMP_N7/src/css/FSection.css
+++ b/CMP_N7/src/css/FSection.css
@@ -3,9 +3,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 2rem;
 }
 .form-seccion {
-  font-size: 2rem;
+  font-size: 2.0rem;
   font-weight: 900;
   margin: 0 auto 0 0;
   width: 100%;
