modified:   CMP_N7/src/css/BrokedShields.css 	modified:   CMP_N7/src/css/FButton.css 	modified:   CMP_N7/src/css/Marc.css 	modified:   CMP_N7/src/css/Poder.css 	modified:   CMP_N7/src/css/Tupla.css 	modified:   CMP_N7/src/css/TurnControl.css 	modified:   CMP_N7/src/css/index.css 	modified:   CMP_N7/src/modules/BrokedShields.jsx 	modified:   CMP_N7/src/modules/Marc.jsx 	modified:   CMP_N7/src/modules/Poder.jsx 	modified:   CMP_N7/src/modules/Tupla.jsx 	modified:   CMP_N7/src/modules/TurnReset.jsx 	modified:   CMP_N7/src/modules/TurnShow.jsx

--- a/CMP_N7/src/css/Poder.css
+++ b/CMP_N7/src/css/Poder.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: end;
-  margin: 1rem 1.5rem .5rem 1.5rem;
+  margin: 1rem 1.5rem;
   font-weight: 900;
   font-size: 1.4rem;
 }
@@ -19,16 +19,17 @@
   border-radius: .7rem;
   width: 3rem;
   text-align: center;
+  padding: .3rem;
 }
 
-.poder-btn-activar {
-  margin: 0;
+.poder-btn {
+  /* margin: 0; */
   margin-left: .4rem;
-  border: .2rem solid var(--colorPri);
+  /* border: .2rem solid var(--colorPri);
   border-radius: .7rem;
   background-color: var(--colorPri);
   color: var(--colorSec);
-  text-align: center;
+  text-align: center; */
 }
 
 .poder-disabled {
