new file:   CMP_N7/src/css/Arma.css 	new file:   CMP_N7/src/css/Cargadores.css 	modified:   CMP_N7/src/css/Poder.css 	modified:   CMP_N7/src/initialData.js 	modified:   CMP_N7/src/modules/App.jsx 	new file:   CMP_N7/src/modules/Arma.jsx 	new file:   CMP_N7/src/modules/Armas.jsx 	new file:   CMP_N7/src/modules/Cargadores.jsx 	new file:   CMP_N7/src/modules/FormArma.jsx 	modified:   CMP_N7/src/modules/FormEditPlayer.jsx 	modified:   CMP_N7/src/modules/FormPoder.jsx 	modified:   CMP_N7/src/modules/TurnShow.jsx

--- a/CMP_N7/src/css/Arma.css
+++ b/CMP_N7/src/css/Arma.css
@@ -1,18 +1,18 @@
-.poder-mark {
+.arma-mark {
   display: flex;
   align-items: center;
   justify-content: end;
-  margin: 1rem 1.5rem;
+  margin: 0 1.5rem;
   font-weight: 900;
   font-size: 1.4rem;
 }
 
-.poder-nombre {
+.arma-name {
   margin: 0;
   text-align: right;
 }
 
-.poder-recarga {
+.arma-balas {
   margin: 0;
   margin-left: .4rem;
   border: .2rem solid var(--colorPri);
@@ -22,20 +22,20 @@
   padding: .3rem;
 }
 
-.poder-btn {
+.arma-btn {
   margin-left: .4rem;
 }
 
-.poder-disabled {
-  opacity: .3;
+.arma-recarga {
+  font-size: 1.4rem;
+  text-align: right;  
+  margin: .2rem 1.5rem 1rem 1.5rem;
 }
 
-.poder-activo-nombre {
-  color: var(--colorActived);
-  text-transform: uppercase;
+.arma-recarga span {
+  font-weight: 900;
 }
-.poder-activo-recarga {
-  border-color: var(--colorActived);
-  text-transform: uppercase;
-  background: white
+
+.arma-disabled {
+  opacity: .3;
 }
